# fjsp-env

./: .gitignore  README.md  pyproject.toml  restore.py  train.py  train_and_save_model.py
algorithms/: fcnn_model.py
data/barnes_preprocessed/: mt10c1.fjs  mt10cc.fjs  mt10x.fjs  mt10xx.fjs  mt10xxx.fjs  mt10xy.fjs  mt10xyz.fjs  setb4c9.fjs  setb4cc.fjs  setb4x.fjs  setb4xx.fjs  setb4xxx.fjs  setb4xy.fjs  setb4xyz.fjs  seti5c12.fjs  seti5cc.fjs  seti5x.fjs  seti5xx.fjs  seti5xxx.fjs  seti5xy.fjs  seti5xyz.fjs
data/electric_price/: elect_price_2022.csv
data/instances_preprocessed/: Mk02.fjs  Mk03.fjs  Mk05.fjs  Mk06.fjs  Mk07.fjs  Mk08.fjs  Mk09.fjs  Mk10.fjs
data/taillard_instances_preprocessed/: ta01
data_tools/: machine_consumption.py  preprocess_data.py
dispatching_rules/: fifo.py  mwr.py
fjsp_env/envs/: fjsp_env.py  fjsp_env_v2.py
fjsp_env/envs/instances_preprocessed/: Mk01.fjs  Mk02.fjs  Mk03.fjs  Mk04.fjs  Mk05.fjs  Mk06.fjs  Mk07.fjs  Mk08.fjs  Mk09.fjs  Mk10.fjs
fjsp_env/envs/taillard_instances_preprocessed/: ta01  ta02  ta03  ta04  ta05  ta06  ta07  ta08  ta09  ta10  ta40  ta41  ta42  ta43  ta44  ta45  ta46  ta47  ta48  ta49  ta50  ta51  ta52  ta53  ta54  ta55  ta56  ta57  ta58  ta59  ta60  ta61  ta62  ta63  ta64  ta65  ta66  ta67  ta68  ta69  (+11 more)
fjsp_env/envs/test_instances/: ta01_test  ta02
tests/: test_solutions.py  test_state.py
utils/: CustomCallbacks.py  config.py  preprocess_data.py  preprocess_taillard_instances.py
