[tool.poetry]
name = "fjsp-env"
version = "0.1.0"
description = ""
authors = ["hornstrandir <paul_busch@gmx.de>"]
readme = "README.md"
packages = [{include = "fjsp_env"}]

[tool.poetry.dependencies]
python = "3.9.12"
gym = ">=0.21.0,<=0.23.1"
python-dotenv = "^0.21.0"
wandb = "^0.13.7"
dm-tree = "^0.1.8"
pandas = "^1.5.2"
ray = {version = "~2.1.0", extras = ["rllib"]}
tensorflow = "^2.11.0"
numpy = "~1.23.0"


[tool.poetry.group.dev.dependencies]
black = "^22.12.0"
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
fjsp_env = "fjsp_env.envs.fjsp_env:main"

# Black formatting
[tool.black]
line-length = 88
include = '\.pyi?$'
exclude = '''
/(
      .eggs         # exclude a few common directories in the
    | .git          # root of the project
    | .hg
    | .mypy_cache
    | .tox
    | venv
    | _build
    | buck-out
    | build
    | dist
  )/
'''

